--- a/okhttputils/build.gradle
+++ b/okhttputils/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.novoda.bintray-release'//添加
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 9
