--- a/okhttputils/build.gradle
+++ b/okhttputils/build.gradle
@@ -42,8 +42,8 @@ makeJar.dependsOn(clearJar, build)
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 
 //添加
