--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath 'com.novoda:bintray-release:0.8.1'
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.novoda:bintray-release:0.8.1'
+
     }
 }
 
@@ -20,5 +20,6 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://www.jitpack.io" }
+        google()
     }
 }
