--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,10 @@ allprojects {
         maven { url "https://www.jitpack.io" }
         google()
     }
+
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+        options.addStringOption('charSet', 'UTF-8')
+    }
 }
