--- a/sample-okhttp/build.gradle
+++ b/sample-okhttp/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api 'com.android.support:appcompat-v7:27.1.1'
-    api project(':okhttputils')
+    api project(':utils')
 //    compile 'com.zhy:okhttputils:2.6.1'
     api 'com.google.code.gson:gson:2.8.2'
     api 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
