--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,48 +1,34 @@
-apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'//添加
+import java.util.regex.Pattern
 
+apply plugin: 'java-library'
+apply plugin: 'import-aar'
 
-android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
-
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 5
-        versionName "2.7.1"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    lintOptions{
-        abortOnError false
-        warning 'InvalidPackage'
-    }
-
-}
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+version = '3.0.1'
+def targetSdkVersion = 28
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    def sdkDir = properties.getProperty('sdk.dir')
+
+    if (isGradle3()) {
+        compileOnly files("${sdkDir}/platforms/android-${targetSdkVersion}/android.jar")
+    } else {
+        project.dependencies.add("compileOnly", files("${sdkDir}/platforms/android-${targetSdkVersion}/android.jar"))
+    }
     api 'com.squareup.okhttp3:okhttp:3.10.0'
-    testImplementation 'junit:junit:4.12'
 }
 
 
-apply plugin: 'com.novoda.bintray-release'
-//发布到
-//发布请执行
-//gradlew clean build bintrayUpload -PbintrayUser=kigkrazy -PbintrayKey=BINTRAY_KEY -PdryRun=false
-publish {
-    repoName = 'reizxutils'
-    userOrg = 'kigkrazy'//bintray.com用户名
-    groupId = 'com.reizx'//jcenter上的路径
-    artifactId = 'okhttputils'//项目名称
-    publishVersion = android.defaultConfig.versionName//版本号
-    desc = 'an okhttp3 wapper utils'
-    website = 'https://github.com/kigkrazy/okhttputils'
+private boolean isGradle3() {
+    Pattern GRADLE_ACCEPTABLE_VERSIONS = Pattern.compile("4\\.\\d*|0\\.\\d*[1-9]\\d*\$")
+    if (GRADLE_ACCEPTABLE_VERSIONS.matcher(project.getGradle().getGradleVersion()).matches()) {
+        return true
+    }
+    return false
 }
 
