--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,16 @@
 buildscript {
     repositories {
         jcenter()
-
+        maven { url 'https://jitpack.io' }
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.novoda:bintray-release:0.8.1'
-
+        classpath "com.github.nekocode:GradleImportAar:0.5"
     }
 }
 
