--- a/sample-okhttp/build.gradle
+++ b/sample-okhttp/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion parent.ext.compileSdkVersion
+    buildToolsVersion parent.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.zhy.sample_okhttp"
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion parent.ext.minSdkVersion
+        targetSdkVersion parent.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -25,10 +25,10 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.android.support:appcompat-v7:28.0.0'
+    api "com.android.support:appcompat-v7:${parent.ext.supportVersion}"
     api project(':utils')
 //    compile 'com.zhy:okhttputils:2.6.1'
-    api 'com.google.code.gson:gson:2.8.2'
+    api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
     api 'com.github.franmontiel:PersistentCookieJar:v0.9.3'
 }
