1. 增加versionCode 2. 改版本名

--- a/sample-okhttp/build.gradle
+++ b/sample-okhttp/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.zhy.sample_okhttp"
         minSdkVersion parent.ext.minSdkVersion
         targetSdkVersion parent.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode parent.ext.versionCode
+        versionName parent.ext.versionName
     }
     buildTypes {
         release {
