--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ allprojects {
         targetSdkVersion = 28
         compileSdkVersion = 28
         supportVersion = "28.0.0"
-        version = '3.0.1'
+        versionName = '3.0.1'
+        versionCode = 11
     }
 }
