引入发布信息

--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -54,3 +54,6 @@ publish {
     desc = 'an okhttp3 wapper utils'
     website = 'https://github.com/kigkrazy/okhttputils'
 }
+
+// 引入发布配置模块
+apply from: projectDir.absolutePath + File.separator + "publish.gradle"
