--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+        google()
+        mavenCentral()
         maven{ url 'https://maven.aliyun.com/repository/google' }
         maven{ url 'https://maven.aliyun.com/repository/jcenter' }
         maven{url 'https://maven.aliyun.com/nexus/content/groups/public'}
