增加新仓库

--- a/utils/publish.gradle
+++ b/utils/publish.gradle
@@ -16,6 +16,10 @@ publishing {
             } else {
                 url "${mvnSnapshotRepoUrl}"
             }
+            credentials {
+                username = "${user}"
+                password = "${token}"
+            }
         }
     }
 }
