--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,24 @@
 
 buildscript {
     repositories {
-        google()
         mavenCentral()
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        google()
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-rc01'
+        classpath 'com.android.tools.build:gradle:7.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         classpath "com.github.nekocode:GradleImportAar:0.5"
+
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.21.0'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         maven { url "https://www.jitpack.io" }
         google()
     }
@@ -36,7 +36,7 @@ allprojects {
         targetSdkVersion = 28
         compileSdkVersion = 28
         supportVersion = "28.0.0"
-        versionName = '3.3.2'
-        versionCode = 14
+        versionName = '3.3.4'
+        versionCode = 19
     }
 }
