--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,32 @@
 # Project-wide Gradle settings.
-
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jre
+SONATYPE_HOST=S01
+RELEASE_SIGNING_ENABLED=true
+OSSRH_PACKAGE_GROUP=io.github.kigkrazy
+GROUP=io.github.kigkrazy
+VERSION_NAME=3.3.4
+POM_PACKAGING=jar
+POM_INCEPTION_YEAR=2018
+POM_URL=https://github.com/kigkrazy/okhttputils/
+POM_SCM_URL=https://github.com/kigkrazy/okhttputils/
+POM_SCM_CONNECTION=scm:git:git://github.com/kigkrazy/okhttputils.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/kigkrazy/okhttputils.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=okhttputils
+POM_DEVELOPER_NAME=kigkrazy
+POM_DEVELOPER_URL=https://github.com/kigkrazy/
