--- a/utils/publish.gradle
+++ b/utils/publish.gradle
@@ -16,10 +16,10 @@ publishing {
             } else {
                 url "${mvnSnapshotRepoUrl}"
             }
-            credentials {
-                username = "${user}"
-                password = "${token}"
-            }
+//            credentials {
+//                username = "${user}"
+//                password = "${token}"
+//            }
         }
     }
 }
